[package]
name = "os-str-manip"
version = "0.0.1"
edition = "2021"
rust-version = "1.56.1"
repository = "https://github.com/schuelermine/os-str-manip"
license = "MIT"
keywords = ["cross-platform", "ffi"]
categories = ["os", "development-tools::ffi"]
include = ["CHANGELOG.md", "LICENSE", "README.md", "src/"]

[package.metadata.docs.rs]
features = ["unchecked_index"]

[features]
unchecked_index = []
